--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="col-md-8">
         <div class="row mb-4">
           <h4>Undergraduate Student (Sophomore)</h4>
-          <p>I am an undergraduated student of the Department of Computer Science & Technology of Nanjing University. I am interested in Software Engineering. Currently, I am conducting research under the guidance of Professor Xu Chang on self-adapted software, especially applying metamorphic testing on context consistency checking implementations.  </p>
+          <p>I am an undergraduated student of the Department of Computer Science & Technology of Nanjing University. I am interested in Software Engineering. Currently, I am conducting research under the guidance of Professor Chang Xu on self-adapted software, especially applying metamorphic testing on context consistency checking implementations. </p>
         </div>
         <div class="row mb-4">
             <h5>My GitHub Homepage:</h5>
