--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="card-body">
               <h2 class="card-title">Awards</h2>
               <ul>
-                  <li>2023/12: National First Prize in the 2023 China Undergraduate Mathematical Contest in Modeling (全国大学生数学建模竞赛全国一等奖) <span class="badge bg-info">As Team Leader</span> <span class="badge bg-primary"><a herf="paper/CUMCM23.pdf">Paper (PDF)</a></span></li>
+                  <li>2023/12: National First Prize in the 2023 China Undergraduate Mathematical Contest in Modeling (全国大学生数学建模竞赛全国一等奖) <span class="badge bg-info">As Team Leader</span> <a href="paper/CUMCM23.pdf"><span class="badge bg-primary">Paper (PDF)</span></a></li>
                   <li>2023/10: First Prize in the 2023 Nanjing University People's Scholarship (南京大学人民奖学金一等奖)</li>
                   <li>2023/10: Sun Zhongxiu Scholarship of Nanjing University (南京大学孙钟秀奖学金)</li>
               </ul>
