--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="row mb-4 justify-content-between">
       <div class="col-md-9">
         <div class="row mb-4">
-          <h4>Undergraduate Student (Sophomore)</h4>
+          <h4>Undergraduate Student (Junior)</h4>
           <p>I am an undergraduated student of the Department of Computer Science & Technology of Nanjing University. I am interested in Software Engineering, especially construction, evolution and verication of complex software system. Currently, I am conducting research under the guidance of Prof. Chang Xu on self-adapted software, applying metamorphic testing on context consistency checking implementations. </p>
         </div>
         <div class="row mb-4">
@@ -111,7 +111,7 @@
 
     <div class="row mb-4 mt-4 justify-content-center">
       <div class="col-md-auto">
-        <p>Last update: 2024/07/02</p>
+        <p>Last update: 2024/08/31</p>
       </div>
     </div>
   </div>
