--- a/index.html
+++ b/index.html
@@ -26,27 +26,17 @@
       <div class="col-md-9">
         <div class="row mb-4">
           <h4>Undergraduate Student (Junior)</h4>
-          <p>I am an undergraduated student of the Department of Computer Science & Technology of Nanjing University. I am interested in Software Engineering, especially construction, evolution and verication of complex software system. Currently, I am conducting research under the guidance of Prof. Chang Xu on self-adapted software, applying metamorphic testing on context consistency checking implementations. </p>
+          <p>I am an undergraduated student of the School of Computer Science of Nanjing University. I am interested in Software Engineering, especially construction, evolution and verication of complex software system. Currently, I am conducting research under the guidance of Prof. Chang Xu on self-adapted software, applying metamorphic testing on context consistency checking implementations. </p>
         </div>
-        <div class="row mb-4">
-          <div class="card shadow">
-              <div class="card-body">
-                  <h2 class="card-title">Self-Assessment</h2>
-                  <p>I am proactive and conscientious in my studies and work, able to complete tasks according to established plans. I possess good interpersonal skills and team organization abilities, capable of organizing teams and dividing work effectively. I have a solid foundation in programming and good coding practices, and can choose appropriate tools to complete tasks according to given requirements. I am also willing to contribute and share my professional knowledge, having participated in a series of programming tutoring activities for freshmen and children. Previously, I organized a team to participate in the National College Student Mathematical Contest in Modeling, responsible for team organization and programming, and led the team to win the national first prize. As a sophomore, I am aware of my knowledge and experience shortcomings and will continue to improve myself in future studies and life.</p>
-              </div>
-          </div>
-        </div>
+
         <div class="row mb-4">
             <h5>My GitHub Homepage:</h5>
             <a href="https://github.com/WenzeJin">Go to my GitHub Homepage</a>
             <br>
-            <br>
-            <h5>My Blog:</h5>
-            <a href="https://wenzejin.wordpress.com">Go to my Blog</a>
         </div>
       </div>
-      <div class="col-md-3">
-        <img src="assets/img.png" alt="Wenze Jin" class="img-fluid rounded shadow">
+      <div class="col-md-2">
+        <img src="assets/img.jpeg" alt="Wenze Jin" class="img-fluid rounded shadow">
       </div>
     </div>
 
@@ -70,10 +60,11 @@
     <div class="row mb-4">
       <div class="card shadow">
           <div class="card-body">
-              <h2 class="card-title">Awards</h2>
+              <h2 class="card-title">Awards or Honors</h2>
               <ul>
-                  <li>2023/12: National First Prize in the 2023 China Undergraduate Mathematical Contest in Modeling (全国大学生数学建模竞赛全国一等奖) <span class="badge bg-info">As Team Leader</span> <a href="paper/CUMCM23.pdf"><span class="badge bg-primary">Paper (PDF)</span></a></li>
-                  <li>2023/10: First Prize in the 2023 Nanjing University People's Scholarship (南京大学人民奖学金一等奖)</li>
+                  <li>2024/09: <b>China National Scholarship Candidate of 2024 (2024年度国家奖学金候选人)</b> </li>
+                  <li>2023/12: First Prize in the 2023 Nanjing University People's Scholarship (2023年度南京大学人民奖学金一等奖)</li>
+                  <li>2023/11: National First Prize in the 2023 China Undergraduate Mathematical Contest in Modeling (全国大学生数学建模竞赛全国一等奖) <span class="badge bg-info">As Team Leader</span> <a href="paper/CUMCM23.pdf"><span class="badge bg-primary">Paper (PDF)</span></a></li>
                   <li>2023/10: Sun Zhongxiu Scholarship of Nanjing University (南京大学孙钟秀奖学金)</li>
               </ul>
           </div>
@@ -111,7 +102,7 @@
 
     <div class="row mb-4 mt-4 justify-content-center">
       <div class="col-md-auto">
-        <p>Last update: 2024/08/31</p>
+        <p>Last update: 2024/09/29</p>
       </div>
     </div>
   </div>
