--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="col-md-2">
-        <img src="assets/img.jpeg" alt="Wenze Jin" class="img-fluid rounded shadow">
+        <img src="assets/img.png" alt="Wenze Jin" class="img-fluid rounded shadow">
       </div>
     </div>
 
