--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <div class="card-body">
             <h2 class="card-title">Services:</h2>
             <ul>
+                <li>2024-2025: Peer Mentor (朋辈导师) for freshmen in the School of Computer Science, Nanjing University.</li>
                 <li>2024/03: At the invitation of Dr. Wenbin Li, I conducted a lecture on preparation techniques for the China Undergraduate Mathematical Contest in Modeling (CUMCM) for freshmen.
                   <a href="https://mp.weixin.qq.com/s/puC2_YmDysheapTBquWgdg"><span class="badge bg-primary">Report</span></a></li>
             </ul>
