--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wenze Jin's homepage.</title>
+  <title>Welcome to Wenze Jin's homepage.</title>
 
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -37,23 +37,6 @@
       </div>
       <div class="col-md-2">
         <img src="assets/img.png" alt="Wenze Jin" class="img-fluid rounded shadow">
-      </div>
-    </div>
-
-    
-
-    <div class="row mb-4">
-      <div class="card shadow">
-        <div class="card-body">
-          <h2 class="card-title">Skills</h2>
-          <ul>
-              <li>Proficient in C++ programming language, familiar with the underlying implementation of common containers in STL; proficient in Python programming language, familiar with common data analysis and scientific computing libraries (Numpy, Scipy, Pandas); proficient in Java programming language. Knowledgeable in Swift, Go, SQL, etc.</li>
-              <li>Familiar with common data structures and algorithms.</li>
-              <li>Familiar with GoF design patterns: such as Factory Pattern, Command Pattern, Composite Pattern, etc., and can flexibly use them according to the scenario to design well-structured object-oriented programs. Also has a certain understanding of code refactoring.</li>
-              <li>Familiar with basic development tools in the Linux environment; proficient in using git and GitHub workflow, committed to contributing to the open-source community.</li>
-              <li>Good English skills, able to read English literature fluently.</li>
-          </ul>
-        </div>
       </div>
     </div>
 
@@ -103,7 +86,7 @@
 
     <div class="row mb-4 mt-4 justify-content-center">
       <div class="col-md-auto">
-        <p>Last update: 2024/09/29</p>
+        <p>Last update: 2024/10/01</p>
       </div>
     </div>
   </div>
