--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         </div>
 
         <div class="row mb-4">
+          <h5>Email:</h5>
+          wenzejin@smail.nju.edu.cn
+          <br>
+        </div>
+
+        <div class="row mb-4">
             <h5>My GitHub Homepage:</h5>
             <a href="https://github.com/WenzeJin">Go to my GitHub Homepage</a>
             <br>
@@ -86,7 +92,7 @@
 
     <div class="row mb-4 mt-4 justify-content-center">
       <div class="col-md-auto">
-        <p>Last update: 2024/10/10</p>
+        <p>Last update: 2024/10/21</p>
       </div>
     </div>
   </div>
