update blog site

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <h5>My GitHub Homepage:</h5>
             <a href="https://github.com/WenzeJin">Go to my GitHub Homepage</a>
             <br>
+            <h5>My Blog:</h5>
+            <a href="https://wenzejin.notion.site">Go to my blog (powered by notion)</a>
+            <br>
         </div>
       </div>
       <div class="col-md-2">
