--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="https://github.com/WenzeJin">Go to my GitHub Homepage</a>
             <br>
             <h5>My Blog:</h5>
-            <a href="https://wenzejin.notion.site">Go to my blog (powered by notion)</a>
+            <a href="https://wenzejin.notion.site/Wenze-Jin-s-Blog-1635e9fa7b6d80b3adcedfacc74aa717?pvs=4">Go to my blog (powered by notion)</a>
             <br>
         </div>
       </div>
