--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="row mb-4">
       <div class="card shadow">
           <div class="card-body">
-              <h2 class="card-title">Services:</h2>
+              <h2 class="card-title">Other:</h2>
               <ul>
                   <li>2024-2025: Peer Mentor (朋辈导师) for freshmen in the School of Computer Science, Nanjing University.</li>
                   <li>2024/03: At the invitation of Dr. Wenbin Li, I conducted a lecture on preparation techniques for the China Undergraduate Mathematical Contest in Modeling (CUMCM) for freshmen.
