update research interests and email section

--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
         <div class="row mb-4">
           <h5>Research Interests</h5>
           <p>software testing</p>
-          <p>software quality assurance</p>
-          <p>software engineering for big data / AI</p>
+          <p>compilers and programming languages</p>
+          <p>software engineering</p>
         </div>
 
         <div class="row mb-4">
           <h5>Email:</h5>
           <p>wenzejin AT smail DOT nju DOT edu DOT cn<p>
-          <br>
         </div>
 
         <div class="row mb-4">
