--- a/index.html
+++ b/index.html
@@ -26,31 +26,27 @@
       <div class="col-md-9">
         <div class="row mb-4">
           <h4>Undergraduate Student (Junior)</h4>
-          <p>I am an undergraduated student of the School of Computer Science of Nanjing University. Currently, I am conducting research under the guidance of Prof. Chang Xu, applying test approaches on specified software. </p>
+          <p>I am an undergraduated student at the School of Computer Science of Nanjing University, supervised by <a href="https://cs.nju.edu.cn/changxu">Prof. Chang Xu</a>. Before that, I graduated from <a href="https://www.szzx1000.cn/">Suzhou Hign School</a>. I am interested in software testing, compilers, programming languages, and software engineering.</p>
         </div>
         <div class="row mb-4">
-          <h5>Research Interests</h5>
-          <p>software testing</p>
-          <p>compilers and programming languages</p>
-          <p>software engineering</p>
+          <b>Research Interests:</b>
+          software testing <br>
+          compilers and programming languages <br>
+          software engineering
         </div>
-
         <div class="row mb-4">
-          <h5>Email:</h5>
-          <p>wenzejin AT smail DOT nju DOT edu DOT cn<p>
+          <b>Email:</b> wenzejin AT smail DOT nju DOT edu DOT cn
         </div>
-
         <div class="row mb-4">
-            <h5>My GitHub Homepage:</h5>
-            <a href="https://github.com/WenzeJin">Go to my GitHub Homepage</a>
-            <br>
-            <h5>My Blog:</h5>
-            <a href="https://wenzejin.notion.site/Wenze-Jin-s-Blog-1635e9fa7b6d80b3adcedfacc74aa717?pvs=4">Go to my blog (powered by notion)</a>
-            <br>
+            <b>My GitHub Homepage:</b> <a href="https://github.com/WenzeJin">Go to my GitHub Homepage</a>
+            <b>My Blog:</b> <a href="https://wenzejin.notion.site/Wenze-Jin-s-Blog-1635e9fa7b6d80b3adcedfacc74aa717?pvs=4">Go to my blog (powered by notion)</a>
+        </div>
+        <div class="row mb-4">
+          <b>My CV:</b> <a href="assets/cv.pdf">Download my CV (Simplified Chinese version)</a>
         </div>
       </div>
-      <div class="col-md-2">
-        <img src="assets/img.png" alt="Wenze Jin" class="img-fluid rounded shadow">
+      <div class="col-md-3">
+        <img src="assets/img.jpeg" alt="Wenze Jin" class="img-fluid rounded shadow">
       </div>
     </div>
 
@@ -59,22 +55,10 @@
           <div class="card-body">
               <h2 class="card-title">Awards or Honors</h2>
               <ul>
-                  <li>2024/10: <b>China National Scholarship (2024年度国家奖学金)</b> </li>
+                  <li>2024/10: <b>China National Scholarship (国家奖学金)</b> </li>
                   <li>2023/12: First Prize in the 2023 Nanjing University People's Scholarship (2023年度南京大学人民奖学金一等奖)</li>
-                  <li>2023/11: National First Prize in the 2023 China Undergraduate Mathematical Contest in Modeling (全国大学生数学建模竞赛全国一等奖) <span class="badge bg-info">As Team Leader</span> <a href="paper/CUMCM23.pdf"><span class="badge bg-primary">Paper (PDF)</span></a></li>
+                  <li>2023/11: National First Prize in the 2023 China Undergraduate Mathematical Contest in Modeling (全国大学生数学建模竞赛全国一等奖)</li>
                   <li>2023/10: Sun Zhongxiu Scholarship of Nanjing University (南京大学孙钟秀奖学金)</li>
-              </ul>
-          </div>
-      </div>
-    </div>
-
-    <div class="row mb-4">
-      <div class="card shadow">
-          <div class="card-body">
-              <h2 class="card-title">Other:</h2>
-              <ul>
-                  <li>2024-2025: Peer Mentor (朋辈导师) for freshmen in the School of Computer Science, Nanjing University.</li>
-                  <li>2024/03: At the invitation of Dr. Wenbin Li, I conducted a lecture on preparation techniques for the China Undergraduate Mathematical Contest in Modeling (CUMCM) for freshmen.
               </ul>
           </div>
       </div>
@@ -82,7 +66,7 @@
 
     <div class="row mb-4 mt-4 justify-content-center">
       <div class="col-md-auto">
-        <p>Last update: 2024/12/25</p>
+        <p>Last update: 2025/4/15</p>
       </div>
     </div>
   </div>
