--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="col-md-9">
         <div class="row mb-4">
           <h4>Undergraduate Student (Junior)</h4>
-          <p>I am an undergraduated student at the School of Computer Science of Nanjing University, supervised by <a href="https://cs.nju.edu.cn/changxu">Prof. Chang Xu</a>. Before that, I graduated from <a href="https://www.szzx1000.cn/">Suzhou Hign School</a>. I am interested in software testing, compilers, programming languages, and software engineering.</p>
+          <p>I am an undergraduated student at the School of Computer Science of Nanjing University, supervised by <a href="https://cs.nju.edu.cn/changxu">Prof. Chang Xu</a>. Before that, I graduated from <a href="https://www.szzx1000.cn/">Suzhou High School</a>. I am interested in software testing, compilers, programming languages, and software engineering.</p>
         </div>
         <div class="row mb-4">
           <b>Research Interests:</b>
