--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 
   <div class="container">
     <div class="row mt-4">
-      <h1>Wenze Jin (金文泽)</h1>
+      <h1>Wenze JIN (金文泽)</h1>
       <hr>
     </div>
   
     <div class="row mb-4 justify-content-between">
       <div class="col-md-9">
         <div class="row mb-4">
-          <h4>Undergraduate Student (Junior)</h4>
-          <p>I am an undergraduated student at the School of Computer Science of Nanjing University, supervised by <a href="https://cs.nju.edu.cn/changxu">Prof. Chang Xu</a>. Before that, I graduated from <a href="https://www.szzx1000.cn/">Suzhou High School</a>. I am interested in software testing, compilers, programming languages, and software engineering.</p>
+          <h4>Undergraduate Student (Senior)</h4>
+          <p>I am an undergraduated student at the School of Computer Science of Nanjing University, supervised by <a href="https://cs.nju.edu.cn/changxu">Prof. Chang Xu</a>. After my undergraduate studies, I will continue on to a PhD program at Nanjing University. My research interests lies in intelligent software testing and analysis. </p>
         </div>
         <div class="row mb-4">
           <b>Research Interests:</b>
-          software testing <br>
-          compilers and programming languages <br>
+          intelligent software testing and analysis
+          software quality assurance
           software engineering
         </div>
         <div class="row mb-4">
@@ -66,7 +66,7 @@
 
     <div class="row mb-4 mt-4 justify-content-center">
       <div class="col-md-auto">
-        <p>Last update: 2025/4/15</p>
+        <p>Last update: 2025/09/03</p>
       </div>
     </div>
   </div>
