--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="row mb-4">
             <b>My GitHub Homepage:</b> <a href="https://github.com/WenzeJin">Go to my GitHub Homepage</a>
-            <b>My Blog:</b> <a href="https://wenzejin.notion.site/Wenze-Jin-s-Blog-1635e9fa7b6d80b3adcedfacc74aa717?pvs=4">Go to my blog (powered by notion)</a>
+            <b>My Blog:</b> <a href="https://wenzejin.notion.site/blogs">Go to my blog (powered by notion)</a>
         </div>
         <div class="row mb-4">
           <b>My CV:</b> <a href="assets/cv.pdf">Download my CV (Simplified Chinese version)</a>
