--- a/index.html
+++ b/index.html
@@ -30,19 +30,15 @@
         </div>
         <div class="row mb-4">
           <b>Research Interests:</b>
-          intelligent software testing and analysis
-          software quality assurance
-          software engineering
+          intelligent software testing and analysis<br>
+          software quality assurance<br>
+          software engineering<br>
         </div>
         <div class="row mb-4">
           <b>Email:</b> wenzejin AT smail DOT nju DOT edu DOT cn
         </div>
         <div class="row mb-4">
-            <b>My GitHub Homepage:</b> <a href="https://github.com/WenzeJin">Go to my GitHub Homepage</a>
-            <b>My Blog:</b> <a href="https://wenzejin.notion.site/blogs">Go to my blog (powered by notion)</a>
-        </div>
-        <div class="row mb-4">
-          <b>My CV:</b> <a href="assets/cv.pdf">Download my CV (Simplified Chinese version)</a>
+            <b>My GitHub Homepage:</b> <a href="https://github.com/WenzeJin">Go to my GitHub Homepage</a><br>
         </div>
       </div>
       <div class="col-md-3">
@@ -55,6 +51,7 @@
           <div class="card-body">
               <h2 class="card-title">Awards or Honors</h2>
               <ul>
+                  <li>2025/10: BYD Scholarship of Nanjing University (南京大学比亚迪奖学金)</li>
                   <li>2024/10: <b>China National Scholarship (国家奖学金)</b> </li>
                   <li>2023/12: First Prize in the 2023 Nanjing University People's Scholarship (2023年度南京大学人民奖学金一等奖)</li>
                   <li>2023/11: National First Prize in the 2023 China Undergraduate Mathematical Contest in Modeling (全国大学生数学建模竞赛全国一等奖)</li>
@@ -66,7 +63,7 @@
 
     <div class="row mb-4 mt-4 justify-content-center">
       <div class="col-md-auto">
-        <p>Last update: 2025/09/03</p>
+        <p>Last update: 2026/01/15</p>
       </div>
     </div>
   </div>
